--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     container_name: nv
     volumes:
-      - ~/.config/nv/.config/nvim:/root/.config/nvim
+      - C:\Users\xande\Documents\nv\.config:/root/.config/
 
     tty: true
 
